# src/main/kotlin/com/grondona/model/dto/response/Tournaments.kt
@@ -1,5 +1,6 @@
 package com.grondona.model.dto.response
 
+import com.grondona.model.ExtendedAwards
 import com.grondona.model.Tournament
 import com.grondona.model.TournamentStatus
 import java.util.UUID
@@ -8,12 +9,14 @@ data class TournamentResponse(
     val id: UUID,
     val name: String,
     val status: TournamentStatus,
+    val awards: AwardsResponse? = null,
 ) {
     companion object {
-        fun from(tournament: Tournament): TournamentResponse = TournamentResponse(
+        fun from(tournament: Tournament, awards: ExtendedAwards?): TournamentResponse = TournamentResponse(
             id = tournament.id!!,
             name = tournament.name,
             status = tournament.status,
+            awards = awards?.let(AwardsResponse::from),
         )
     }
 }
